добавил функцию createPlayer в player-handler.go и swagger
